Create class instances throughout Skyve the >= Java 9 way.